[Java] Remove unnecessary compiler flags on JDK 9+.