@@ -183,9 +183,7 @@ subprojects {
     }
 
     tasks.withType(JavaCompile) {
-        if (buildJavaVersion >= 9) {
-            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
-            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        if (buildJavaVersion >= 16) {
             // -- Workaround for https://github.com/gradle/gradle/issues/15538
             options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
             // --
@@ -217,11 +215,6 @@ subprojects {
     }
 
     test {
-        if (buildJavaVersion >= 9) {
-            jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
-            jvmArgs('--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED')
-        }
-
         useJUnitPlatform()
 
         testLogging {
